--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -42,11 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MultithreadQueue\MultithreadQueue.cs" />
+    <Compile Include="PairsFinder\PairsFinder.cs" />
+    <Compile Include="PairsFinder\PairsOfNumbers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
