--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -42,12 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MultithreadQueue\FirstTaskTestExecution.cs" />
     <Compile Include="MultithreadQueue\MultithreadQueue.cs" />
     <Compile Include="MultithreadQueue\MultithreadQueueEmptyException.cs" />
     <Compile Include="PairsFinder\PairsFinder.cs" />
     <Compile Include="PairsFinder\PairsOfNumbers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PairsFinder\SecondTaskTestExecution.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
